test/sema/too-many-generic-arguments.delta
// RUN: %check_errors %not %delta -typecheck %s

T foo<T>(T a, T b) { return b; }

// CHECK: [[@LINE+1]]:36: error: too many generic arguments to 'foo', expected 1
void main() { var f = foo<int, int>(1, 2); }
